// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentWrapper Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-id"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="ds-componentWrapper-id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-id"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "helper text",
        }
      }
    />
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-id"
>
  <div>
    children elements
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-id"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="ds-componentWrapper-id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    id="ds-helperErrorText-ds-componentWrapper-id"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "invalid text",
        }
      }
    />
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 4`] = `
<div
  className="css-kle7zy"
  id="ds-componentWrapper-chakra"
>
  <div>
    children elements
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="ds-componentWrapper-props"
>
  <div>
    children elements
  </div>
</div>
`;
